button visibility fix

--- a/src/scss/blocks/type-item.scss
+++ b/src/scss/blocks/type-item.scss
@@ -1,104 +1,114 @@
 .type-item {
-  position: relative;
-  display: flex;
-  padding: 10px;
-  overflow: hidden;
-  &:hover {
-    .type-item__btn {
-      transform: scaleX(1);
-      transform-origin: 0 50%;
-      transition: transform 0.25s;
-    }
-    .type-item__btn::after {
-      transform: translateX(100%);
-      transition: transform 0.25s;
-    }
-  } 
-  &--left {
-    justify-content: flex-start;
-  }
-  &--right {
-    justify-content: flex-end;
-  }
-  @media (min-width: $breakpoint-large) {
-    &::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 50%;
-      z-index: 2;
-      width: 20px;
-      height: 100%;
-      background: #fff;
-      transform: translateX(-50%);
-    }
-  }
+	position: relative;
+	display: flex;
+	padding: 10px;
+	overflow: hidden;
+	@media (min-width: $breakpoint-medium) {
+		&:hover {
+			.type-item__btn {
+				transform: scaleX(1);
+				transform-origin: 0 50%;
+				transition: transform 0.25s;
+				&::after {
+					transform: translateX(100%);
+					transition: transform 0.25s;
+				}
+			}
+		}
+	}
+	&--left {
+		justify-content: flex-start;
+	}
+	&--right {
+		justify-content: flex-end;
+	}
+	@media (min-width: $breakpoint-large) {
+		&::before {
+			content: "";
+			position: absolute;
+			top: 0;
+			left: 50%;
+			z-index: 2;
+			width: 20px;
+			height: 100%;
+			background: #fff;
+			transform: translateX(-50%);
+		}
+	}
 }
 
 .type-item__content {
-  position: relative;
-  z-index: 2;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 100%;
-  min-height: 490px;
-  box-sizing: border-box;
-  padding: 50px 20px 35px;
-  background-color: #fff;
-  overflow: hidden;
-  @media (min-width: $breakpoint-small) {
-    padding: 50px 40px 35px;
-  }
-  @media (min-width: $breakpoint-large) {
-    width: calc(50% - 20px);
-  }
+	position: relative;
+	z-index: 2;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	width: 100%;
+	min-height: 490px;
+	box-sizing: border-box;
+	padding: 50px 20px 35px;
+	background-color: #fff;
+	overflow: hidden;
+	@media (min-width: $breakpoint-small) {
+		padding: 50px 40px 35px;
+	}
+	@media (min-width: $breakpoint-large) {
+		width: calc(50% - 20px);
+	}
 }
 
 .type-item__bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  width: 100%;
-  height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	width: 100%;
+	height: 100%;
 }
 
 .type-item__title {
-  margin-bottom: 16px;
-  color: #343434;
-  font-size: 30px;
-  font-weight: 700;
+	margin-bottom: 16px;
+	color: #343434;
+	font-size: 30px;
+	font-weight: 700;
 }
 
 .type-item__btn {
-  transform-origin: 0 50%;
-  transition: transform 0.25s;
-  margin-bottom: 30px;
-  &::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 3;
-    background: #fff;
-    transform-origin: 0% 50%;
-    transition: transform 0.25s;
-  }
+	transform-origin: 0 50%;
+	transition: transform 0.25s;
+	margin-bottom: 30px;
+	transform: scaleX(1);
+	@media (min-width: $breakpoint-medium) {
+		transform: scaleX(0);
+	}
+	&::after {
+		content: "";
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		z-index: 3;
+		background: #fff;
+		transform-origin: 0% 50%;
+		``transition: transform 0.25s;
+		transform: translateX(100%);
+		@media (min-width: $breakpoint-medium) {
+			transform: translateX(0%);
+		}
+	}
 }
 
 .type-item__list {
-  @include reset-list;
+	@include reset-list;
 }
 
 li.type-item__list-item:not(:last-of-type) {
-  margin-bottom: 15px;
+	margin-bottom: 15px;
 }
 
 .type-item__price {
-  color: #343434;
-  font-size: 24px;
-  font-weight: 700;
+	color: #343434;
+	font-size: 24px;
+	font-weight: 700;
 }
